--- a/www/smsedge-fe/src/index.html
+++ b/www/smsedge-fe/src/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>SmsedgeFe</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<html lang="ru">
+    <head>
+        <meta charset="utf-8">
+        <title>SMSEdgr aggregation table</title>
+        <base href="/" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+        <meta name="author" content="Max Nagaychenko nagaychenko.dev[at]gmail.com http://blog.nagaychenko.com" />
+        <meta name="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="stylesheet" href="assets/css/ui/1.12.1/themes/base/jquery-ui.css">
+        <script src="assets/js/jquery-1.12.4.js"></script>
+        <script src="assets/js/jquery-ui.js"></script>
+        <script src="assets/js/jquery-ui-i18n.min.js"></script>
+    </head>
+    <body>
+        <app-root></app-root>
+    </body>
 </html>
